add indicator arrows

--- a/src/app.css
+++ b/src/app.css
@@ -80,6 +80,16 @@ body {
   padding: 3px;
 }
 
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
 .right {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
