--- a/src/app.css
+++ b/src/app.css
@@ -48,6 +48,19 @@ body {
   padding: 2px;
 }
 
+.great {
+  color: blue;
+
+}
+
+.good {
+  color: green;
+}
+
+.danger {
+  color: orangered;
+}
+
 @media (max-width: 400px) {
   .flex-grid {
     display: block;
@@ -78,6 +91,7 @@ body {
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
+  position:relative;
 }
 
 .up {
@@ -88,6 +102,7 @@ body {
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
+  bottom: 5px;
 }
 
 .right {
