--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,15 @@
-html, body {
+@import url('https://fonts.googleapis.com/css?family=Abel');
+
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
+body {
+    background:#d8eee7ec;
+    font-family: Abel, Arial, Verdana, sans-serif;
+}
+
+/* html, body {
   height: 100%;
   overflow: hidden;
   box-sizing: border-box;
@@ -7,18 +18,18 @@ html, body {
   line-height: 1.2;
   height: 99%;
   color: darkslategray;
-}
+} */
 
 .main-container {
   margin: auto;
-  width: 75vw;
+  width: 50vw;
 }
 
 .flex-grid {
-    display: flex;
-    padding-bottom: .75vh;
-    margin: 1px 2px;
-    padding: 2px;
+  display: flex;
+  padding-bottom: .75vh;
+  margin: 1px 2px;
+  padding: 2px;
 }
 
 .header {
@@ -63,25 +74,6 @@ html, body {
 
 .danger {
   color: orangered;
-}
-
-.patient-card {
-  background-color: aliceblue;
-  margin: 3px;
-  height: 130px;
-  cursor:pointer;
-  width: 28vw;
-}
-
-.patient-name {
-  font-size: 16px;
-  line-height: 21px;
-  margin: 1px;
-}
-
-.patient-detail {
-  font-size: 12px;
-  line-height: 21px;
 }
 
 .block {
@@ -149,6 +141,23 @@ html, body {
   animation: lds-dual-ring 1.2s linear infinite;
   
 }
+.loading-message {
+  margin: auto;
+  width: 81px;
+}
+/* HTML: <div class="progress-loader"></div> */
+/* https://css-loaders.com/progress/ */
+.progress-loader {
+  margin-top: 18px;;
+  width: 80px;
+  height: 15px;
+  -webkit-mask: radial-gradient(circle closest-side,#000 94%,#0000) left/20% 100%;
+  background: linear-gradient(#000 0 0) left/0% 100% no-repeat #ddd;
+  animation: l17 2s infinite steps(6);
+}
+@keyframes l17 {
+    100% {background-size:120% 100%}
+}
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
@@ -183,6 +192,9 @@ html, body {
   padding: 0px 10px;
 }
 
+.navigation-control-arrow {
+  line-height: 32px;
+}
 .page-number {
   padding: 5px;
   text-align: center;
@@ -194,6 +206,7 @@ html, body {
   width: 25px;
   height: 25px;
   cursor: pointer;
+  line-height: 11px;
 }
 .selected {
   font-weight: bold;
@@ -227,4 +240,52 @@ html, body {
 .left {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
+}
+
+.avatar-card {
+    background: #FCEEB5;
+    border-radius: 6px;
+    height: 14rem;
+    margin: .6rem;
+    position: relative;
+}
+
+.profile {
+    align-content: center;
+    background-color: rgb(155, 35, 35);
+    height: 100%;
+    max-width: 12em;
+    border-radius: 6px 0 0 6px;
+    text-align:center;
+}
+
+.circular-image-container {
+    width: 2em;
+    margin: auto;
+    padding-top: 20px;
+}
+
+.circular-image {
+    position: relative;
+    left: -2em;
+    border-top-left-radius: 50% 50%; 
+    border-top-right-radius: 50% 50%; 
+    border-bottom-right-radius: 50% 50%; 
+    border-bottom-left-radius: 50% 50%;
+}
+
+.profile-details {
+    align-content: center;
+    width: 300px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    box-sizing: border-box;
+    padding: 1rem;
+}
+
+.detail {
+    font-weight: bolder;
 }
